--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -9,3 +9,14 @@
 .dash__text {
   display: flex;
 }
+.banner__container {
+  background-image: url("../public/Images/banner.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 60vh;
+}
+.banner__text {
+  padding: "0 5rem";
+}
