--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -23,6 +23,11 @@
 .relevant__point {
   width: 300px;
   background-color: antiquewhite;
-  padding: 4rem 2rem;
+  padding: 5rem 3rem;
   margin: 1rem 0;
+}
+.title {
+  margin: 1rem 0;
+  font-weight: 600;
+  font-size: 2rem;
 }
