bug:fixed the relevant point flex

--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -17,8 +17,6 @@
   margin-top: 5rem;
 }
 .relevant__container {
-  display: flex;
-  /* justify-content: space-between; */
   margin: 2rem 0;
 }
 .relevant__point {
@@ -26,10 +24,12 @@
   background-color: #faebd7;
   padding: 5rem 3rem;
   margin: 1rem 0;
-  /* border-bottom: 2px solid #faebd7; */
 }
 .title {
   margin: 1rem 0;
   font-weight: 600;
   font-size: 2rem;
+}
+.love__text {
+  align-items: center;
 }
