chore:flex the images

--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -53,9 +53,9 @@
   height: 100%;
 }
 
-.relevant__ben {
+/* .relevant__ben {
   display: flex;
-}
-.pppp {
+} */
+/* .pppp {
   margin-top: 30px;
-}
+} */
