--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -58,6 +58,8 @@
   display: grid;
   place-items: center;
 }
-/* .pppp {
-  margin-top: 30px;
-} */
+.benefits__container {
+  margin-top: 5rem;
+  background-color: #f5f2f0;
+  padding: 1rem;
+}
