--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -78,6 +78,11 @@
   padding-right: 2rem;
   width: 400px;
 }
+.sermon__text h4 {
+  color: #d79861;
+  text-transform: uppercase;
+  font-weight: bold;
+}
 .sermon__title {
   margin: 0.6rem 0;
   font-weight: bold;
