--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -96,3 +96,11 @@
 .time span {
   margin-left: 0.5rem;
 }
+.world__container {
+  background-image: url("../public/Images/world.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
