--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -104,3 +104,13 @@
   width: 100%;
   height: 100vh;
 }
+.world__text {
+  display: flex;
+  width: 400px;
+  justify-content: center;
+  flex-direction: column;
+  align-items: left;
+
+  background-color: #fff;
+  padding: 2rem;
+}
