--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -106,11 +106,16 @@
 }
 .world__text {
   display: flex;
-  width: 400px;
+  width: 600px;
   justify-content: center;
   flex-direction: column;
   align-items: left;
-
+  position: absolute;
+  z-index: 30;
+  /* left: 0%; */
+  /* transform: translate(-50%, -50%); */
+  margin-left: 200px;
+  margin-top: 200px;
   background-color: #fff;
   padding: 2rem;
 }
