--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -103,19 +103,22 @@
   background-size: cover;
   width: 100%;
   height: 100vh;
+  /* margin-top: 4rem; */
 }
 .world__text {
   display: flex;
-  width: 600px;
+  width: 700px;
   justify-content: center;
   flex-direction: column;
   align-items: left;
   position: absolute;
   z-index: 30;
-  /* left: 0%; */
-  /* transform: translate(-50%, -50%); */
-  margin-left: 200px;
+  margin-left: 400px;
   margin-top: 200px;
   background-color: #fff;
-  padding: 2rem;
+  padding: 4rem;
+}
+.world__title {
+  font-size: 2rem;
+  font-weight: bold;
 }
