--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -127,3 +127,19 @@
   width: 300px;
   height: 400px;
 }
+.blog__text {
+  margin-top: 2rem;
+  padding-left: 4rem;
+  padding-right: 2rem;
+  width: 400px;
+}
+.blog__text h4 {
+  color: #d79861;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.blog__title {
+  margin: 0.6rem 0;
+  font-weight: bold;
+  font-size: 1rem;
+}
