--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -125,13 +125,14 @@
 .read__blog__container {
   background-color: #fff5eb;
   width: 300px;
-  height: 400px;
+  height: 350px;
 }
 .blog__text {
   margin-top: 2rem;
-  padding-left: 4rem;
+  padding-left: 2rem;
   padding-right: 2rem;
-  width: 400px;
+  padding-top: 2rem;
+  width: 100%;
 }
 .blog__text h4 {
   color: #d79861;
@@ -140,6 +141,7 @@
 }
 .blog__title {
   margin: 0.6rem 0;
-  font-weight: bold;
-  font-size: 1rem;
+  font-weight: 700;
+  font-size: 1.2rem;
+  /* line-height: 2rem; */
 }
