--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -126,13 +126,14 @@
   background-color: #fff5eb;
   width: 300px;
   height: 350px;
+  margin: 0 1rem;
 }
 .blog__text {
-  margin-top: 2rem;
   padding-left: 2rem;
   padding-right: 2rem;
   padding-top: 2rem;
   width: 100%;
+  margin: 0 1rem;
 }
 .blog__text h4 {
   color: #d79861;
@@ -143,5 +144,4 @@
   margin: 0.6rem 0;
   font-weight: 700;
   font-size: 1.2rem;
-  /* line-height: 2rem; */
 }
