--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -18,11 +18,11 @@
 }
 .relevant__container {
   margin: 2rem 0;
+  background-color: #faebd7;
 }
 .relevant__point {
   width: 350px;
-  background-color: #faebd7;
-  padding: 5rem 3rem;
+  padding: 4rem 3rem;
   margin: 1rem 0;
 }
 .title {
@@ -103,7 +103,6 @@
   background-size: cover;
   width: 100%;
   height: 100vh;
-  /* margin-top: 4rem; */
 }
 .world__text {
   display: flex;
@@ -126,7 +125,7 @@
   background-color: #fff5eb;
   width: 300px;
   height: 350px;
-  margin: 0 1rem;
+  margin: 0 1rem 4rem 0;
 }
 .blog__text {
   padding-left: 2rem;
@@ -152,6 +151,18 @@
   align-items: flex-start;
 }
 .read__blog__container:first-child .empty__div {
+  height: 13px;
+  background-color: #ffd0a0;
+  width: 100%;
+}
+/* .relevant__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+} */
+
+.empty__div__div {
   height: 13px;
   background-color: #ffd0a0;
   width: 100%;
