--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -170,3 +170,9 @@
   width: 100%;
   height: 50vh;
 }
+.contact__text {
+  position: absolute;
+  z-index: 2;
+  color: #fff;
+  margin: 5rem 0 0 5rem;
+}
