--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -176,6 +176,30 @@
   color: #fff;
   margin: 5rem 0 0 5rem;
 }
+
+.address {
+  margin: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f5f2f0;
+}
+.address__title {
+  color: #808080;
+  margin-bottom: 0.4rem;
+}
 .form {
-  /* flex-direction: column; */
+  margin: 2rem 0;
+}
+.input {
+  width: 400px;
+  border: 1px solid;
+  margin: 0.5rem 0;
+  padding: 0.7rem 0.5rem;
+  border-radius: 3px;
+}
+.message {
+  width: 100%;
+  padding: 0.5rem 0.5rem;
 }
