--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -193,11 +193,12 @@
   margin: 2rem 0;
 }
 .input {
-  width: 400px;
-  border: 1px solid;
+  width: 600px;
+  color: #30313b;
   margin: 0.5rem 0;
-  padding: 0.7rem 0.5rem;
+  padding: 1rem 0.9rem;
   border-radius: 3px;
+  font-weight: bold;
 }
 .message {
   width: 100%;
