minor styles change and clear the contact text

--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -216,7 +216,7 @@
   width: 100px;
   color: #000;
 }
-.social__contact__icons:hover {
-  /* transform: scale(1.5); */
-  /* color: #ffd0a0; */
-}
+/* .social__contact__icons:hover { */
+/* transform: scale(1.5); */
+/* color: #ffd0a0; */
+/* } */
