sermon title and texts

--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -216,7 +216,6 @@
   width: 100px;
   color: #000;
 }
-/* .social__contact__icons:hover { */
-/* transform: scale(1.5); */
-/* color: #ffd0a0; */
-/* } */
+/* the sermon part of the project */
+.sermon__container {
+}
