--- a/Components/components.module.css
+++ b/Components/components.module.css
@@ -223,9 +223,17 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   position: relative;
 }
 .sermon__text__sermon {
   position: absolute;
+  margin: 10rem 0 0 7rem;
+}
+.sermon__text__title {
+  margin-bottom: 5rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-family: Tahoma;
 }
